<resources>
    <string name="app_name">数据存储</string>
    <string name="main_set">存数据</string>
    <string name="main_get">获取数据</string>
    <string name="main_create">创建</string>
    <string name="hello">helloWord!</string>
    <string name="main_advance">前进</string>
    <string name="main_left">向左</string>
    <string name="main_right">向右</string>
    <string name="main_back">后退</string>
    <string name="ds_sendQQ">请输入QQ</string>
    <string name="ds_snedPWD">请输入密码</string>
    <string name="ds_rememberPWD">记住密码</string>
    <string name="ds_login">登录</string>
    <string name="service_star">启动</string>
    <string name="service_stop">停止</string>
    <string name="service_get">获取</string>
</resources>
