<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >
    <Button
        android:id="@+id/service_act_star_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_star"/>
    <Button
        android:id="@+id/service_act_stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_stop"/>
    <Button
        android:id="@+id/service_act_get_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_get"/>
</LinearLayout>
